# conjure

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: db.rs  default_tools.rs  domain.rs  error.rs  executor.rs  http.rs  lib.rs  main.rs  mcp.rs  registry.rs
docs/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: tokens.css
frontend/src/components/editor/: EditorSection.vue  OptionChips.vue  ParameterCard.vue  ParameterInput.vue
frontend/src/components/layout/: AppShell.vue  TopBar.vue
frontend/src/components/log/: LogRow.vue
frontend/src/components/tool/: CategoryChip.vue  ToolCard.vue
frontend/src/components/ui/: AppButton.vue  AppIcon.vue  AppModal.vue  CodeEditor.vue  ComboBox.vue  EmptyState.vue  FormField.vue  GlassPanel.vue  JsonViewer.vue  MarkdownContent.vue  SelectMenu.vue  StatusBadge.vue  StatusDot.vue  TextAreaField.vue  ToggleSwitch.vue
frontend/src/domain/: defaults.ts  formatters.ts  markdown.ts  schema.ts  types.ts  viewer.ts
frontend/src/pages/: EditorPage.vue  LogsPage.vue  SettingsPage.vue  TestPage.vue  ToolsPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: conjure.ts
scripts/: install.ps1  install.sh
